--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -76,7 +76,8 @@ button.register-btn {
 button.register-btn:hover {
     background-color: #616161;
 }
-/* Additional styles for the Register Page */
+/* Style for Register page */
+
 .register-container {
     background-color: #1e1e1e;
     padding: 20px;
@@ -90,19 +91,20 @@ button.register-btn:hover {
     margin-bottom: 20px;
 }
 
-.register-container .input-group {
+.input-group {
     margin-bottom: 15px;
     text-align: left;
 }
 
-.register-container label {
+label {
     display: block;
     margin-bottom: 5px;
     color: #bbbbbb;
 }
 
-.register-container input[type="email"],
-.register-container input[type="password"] {
+input[type="text"],
+input[type="email"],
+input[type="password"] {
     width: 100%;
     padding: 10px;
     border: none;
@@ -111,18 +113,19 @@ button.register-btn:hover {
     color: #ffffff;
 }
 
-.register-container input[type="email"]:focus,
-.register-container input[type="password"]:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
     outline: none;
     border: 1px solid #3f51b5;
 }
 
-.register-container .button-group {
+.button-group {
     display: flex;
     justify-content: center;
 }
 
-.register-container button {
+button {
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
@@ -133,9 +136,10 @@ button.register-btn:hover {
     transition: background-color 0.3s ease;
 }
 
-.register-container button:hover {
+button:hover {
     background-color: #303f9f;
 }
+
 /* Additional styles for the Dashboard Page */
 .dashboard-container {
     background-color: #1e1e1e;
