--- a/frontend/src/Style.css
+++ b/frontend/src/Style.css
@@ -162,3 +162,37 @@ button {
 button:hover {
   background-color: #303f9f;
 }
+
+.tooltip {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #2a2a2a;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  font-size: 12px;
+  color: #bbbbbb;
+}
+
+.tooltip ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.tooltip li {
+  margin-bottom: 5px;
+}
+
+.back-button {
+  background-color: #757575; /* Matches the dark gray tone */
+  color: #ffffff;
+  padding: 10px 15px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background-color: #616161; /* Slightly darker gray on hover */
+}
